src/Dependencies/libtase2-2.3.0/src/inc/tase2_endpoint.h

/**
 * \brief Represents a connection to another connected TASE.2 endpoint
 */
typedef struct sTase2_Endpoint_Connection* Tase2_Endpoint_Connection;
/**
 * \brief T selector (ISO transport layer address)
 *
 * For not using T selector set size to 0.
 */
typedef struct
{
    uint8_t size; /** 0 .. 4 - 0 means T-selector is not present */
    uint8_t value[16]; /** T-selector value */
} Tase2_TSelector;
/**
 * \brief S selector (ISO session layer address)
 *
 * For not using S selector set size to 0.
 */
typedef struct
{
    uint8_t size; /** 0 .. 16 - 0 means S-selector is not present */
    uint8_t value[16]; /** S-selector value */
} Tase2_SSelector;
/**
 * \brief P selector (ISO presentation layer address)
 *
 * For not using P selector set size to 0.
 */
typedef struct
{
    uint8_t size; /** 0 .. 16 - 0 means P-selector is not present */
    uint8_t value[16]; /** P-selector value */
} Tase2_PSelector;
/**
 * \brief Get the address of the peer application (IP address and port number)
 *
 * NOTE: The memory of the returned string is managed by the library! The
 * string is only valid in the context of the callback function or when used
 * outside a callback as long as the Tase2_Endpoint_Connection object exists.
 * This changed with version 2.1!
 *
 * \param self the Tase2_Endpoint_Connection instance
 *
 * \return the IP address and port number as strings separated by the ':' character.
 */
TASE2_API char*
Tase2_Endpoint_Connection_getPeerIpAddress(Tase2_Endpoint_Connection self);
/**
 * \brief Get the ISO ACSE AP-title of the peer
 *
 * NOTE: The memory of the returned string is managed by the library! The
 * string is only valid in the context of the callback function or when used
 * outside a callback as long as the Tase2_Endpoint_Connection object exists.
 * This changed with version 2.1!
 *
 * \return the AP-title as string. The AP-title parts are separated by dots ('.')
 */
TASE2_API char*
Tase2_Endpoint_Connection_getPeerApTitle(Tase2_Endpoint_Connection self);
/**
 * \brief Get the T selector of the peer
 *
 * NOTE: The returned object is managed by the library! It
 * is only valid in the context of the callback function or when used
 * outside a callback as long as the Tase2_Endpoint_Connection object exists.
 *
 * \return the T selector
 */
TASE2_API Tase2_TSelector*
Tase2_Endpoint_Connection_getPeerTSel(Tase2_Endpoint_Connection self);
/**
 * \brief Get the S selector of the peer
 *
 * NOTE: The returned object is managed by the library! It
 * is only valid in the context of the callback function or when used
 * outside a callback as long as the Tase2_Endpoint_Connection object exists.
 *
 * \return the S selector
 */
TASE2_API Tase2_SSelector*
Tase2_Endpoint_Connection_getPeerSSel(Tase2_Endpoint_Connection self);
/**
 * \brief Get the P selector of the peer
 *
 * NOTE: The returned object is managed by the library! It
 * is only valid in the context of the callback function or when used
 * outside a callback as long as the Tase2_Endpoint_Connection object exists.
 *
 * \return the P selector
 */
TASE2_API Tase2_PSelector*
Tase2_Endpoint_Connection_getPeerPSel(Tase2_Endpoint_Connection self);
/**
 * \brief Get the ISO ACSE AE-qualifier of the peer
 *
 * \return the AE-qualifier value
 */
TASE2_API int
Tase2_Endpoint_Connection_getPeerAeQualifier(Tase2_Endpoint_Connection self);
/**
 * \brief Get the maximum MMS PDU size used by this connection
 *
 * \return the maximum MMS PDU size
 */
TASE2_API int
Tase2_Endpoint_Connection_getMaxPduSize(Tase2_Endpoint_Connection self);